Add DCHECK to verify results of SkSurface::MakeFromBackendRenderTarget()

CreateSkSurfaceForVulkan() in SkiaOutputSurfaceImplOnGpu wasn't handling
the case when MakeFromBackendRenderTarget() fails, while calling code
expects sk_surface_ to be set after CreateSkSurfaceForVulkan()
completes. Add a DCHECK to verify that CreateSkSurfaceForVulkan() always
succeeds. This would make it easier to debug the linked bug.

Bug: 920000
Change-Id: Ieed3191b836eb690a6896833824faa5c86707f8f
Reviewed-on: https://chromium-review.googlesource.com/c/1404374
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621815}
Former-commit-id: fa8930c92b40ffc48dffbcd2a1a0f6eb37260cfd